<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisaamariles.chefburger_app.menufragment"
    android:background="@color/silver"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                android:background="@drawable/portada">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:text="@string/portada"
                    android:id="@+id/Portada"
                    android:gravity="center"
                    android:textSize="36sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Menu"
                android:id="@+id/Menu"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:background="@color/gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="125dp"
                    android:layout_height="130dp"
                    android:orientation="horizontal"
                    android:background="@drawable/hamburgesa">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/Hamburguesa"
                        android:text="@string/Hamburguesa"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/papas">
                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:id="@+id/Papas"
                        android:text="@string/Papas"
                        android:gravity="center"
                        android:textSize="19sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="@drawable/brownie">
                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:id="@+id/Brownie"
                        android:text="@string/Brownie"
                        android:gravity="center"
                        android:textSize="19sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Ubicacion"
                android:id="@+id/Ubicacion"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:background="@color/gray"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/poblado"/>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/Poblado"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/envigado"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/envigado"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/laureles"/>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/laureles"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/mayorca"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mayorca"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/molinos"/>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:text="@string/molinos"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/tesoro"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tesoro"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
