<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegistroActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registro"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:id="@+id/Name"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:singleLine="true"
        android:textStyle="italic"
        android:id="@+id/eName"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pass"
        android:id="@+id/Pass"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textStyle="italic"
        android:gravity="center"
        android:id="@+id/ePass"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RPass"
        android:id="@+id/RPass"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:singleLine="true"
        android:textStyle="italic"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/eRPass"
        android:textColor="@color/black"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:id="@+id/Email"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:singleLine="true"
        android:textStyle="italic"
        android:gravity="center"
        android:id="@+id/eEmail"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:inputType="textEmailAddress"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/baceptar"
            android:id="@+id/bAceptar"
            android:textSize="20sp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/bcancelar"
            android:id="@+id/bCancelar"
            android:textSize="20sp"/>
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datos"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />

</LinearLayout>