<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogginActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondo1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chef"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:id="@+id/Name"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:singleLine="true"
        android:textStyle="italic"
        android:id="@+id/eName"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pass"
        android:id="@+id/Pass"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textStyle="italic"
        android:gravity="center"
        android:id="@+id/ePass"
        android:textColor="@color/white"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/baceptar"
            android:id="@+id/bAceptar"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/registro"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/blue"
        android:clickable="true"
        android:onClick="handleOnClick"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datos"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        />

</LinearLayout>